chore: update all references to main repository
- Update workflows to use main repo instead of cadhy-releases
- Update auto-updater URL to fetch from main repo releases
- Update all web links and constants to point to main repo
- Simplify deploy-web workflow to use GITHUB_TOKEN
- Remove dependency on external repository for releases

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,23 +11,23 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://crhistian-cornejo.github.io/cadhy-releases/" />
+    <meta property="og:url" content="https://crhistian-cornejo.github.io/CADHY/" />
     <meta property="og:title" content="CADHY - Hydraulic Engineering, Reimagined" />
     <meta property="og:description" content="Professional CAD software for hydraulic engineering. Open channel flow, pipe networks, GVF analysis with AI assistance." />
-    <meta property="og:image" content="https://crhistian-cornejo.github.io/cadhy-releases/hero/light.png" />
+    <meta property="og:image" content="https://crhistian-cornejo.github.io/CADHY/hero/light.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://crhistian-cornejo.github.io/cadhy-releases/" />
+    <meta property="twitter:url" content="https://crhistian-cornejo.github.io/CADHY/" />
     <meta property="twitter:title" content="CADHY - Hydraulic Engineering, Reimagined" />
     <meta property="twitter:description" content="Professional CAD software for hydraulic engineering. Open channel flow, pipe networks, GVF analysis with AI assistance." />
-    <meta property="twitter:image" content="https://crhistian-cornejo.github.io/cadhy-releases/hero/light.png" />
+    <meta property="twitter:image" content="https://crhistian-cornejo.github.io/CADHY/hero/light.png" />
 
     <title>CADHY - Hydraulic Engineering Software</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
-    <link rel="canonical" href="https://crhistian-cornejo.github.io/cadhy-releases/" />
+    <link rel="canonical" href="https://crhistian-cornejo.github.io/CADHY/" />
 
     <!-- Preconnect to font origins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -67,7 +67,7 @@
         if (redirectPath && redirectPath !== '/') {
           sessionStorage.removeItem('spa-redirect-path');
           // Get the base path (repo name)
-          const basePath = '/cadhy-releases';
+          const basePath = '/CADHY';
           // Reconstruct the full path
           const fullPath = basePath + redirectPath;
           window.history.replaceState(null, '', fullPath + window.location.search + window.location.hash);
