--- a/apps/web/public/404.html
+++ b/apps/web/public/404.html
@@ -13,7 +13,7 @@
 
       // Get the repo name from the path (for GitHub Pages)
       const pathSegments = window.location.pathname.split('/');
-      const repoName = pathSegments[1]; // 'cadhy-releases'
+      const repoName = pathSegments[1]; // 'CADHY'
 
       // Get the path after the repo name
       const pathAfterRepo = `/${pathSegments.slice(2).join('/')}`;
