feat: implement real system metrics with Tauri backend
Backend (Rust):
- Added sysinfo dependency for real system monitoring
- Created get_system_metrics command with CPU, RAM, and GPU info
- Platform-specific GPU detection (macOS, Windows, Linux)
- Returns memory usage (used/total MB), CPU %, and GPU model

Frontend (React):
- Updated StatusBar to fetch metrics from Tauri every 2s
- Added CPU usage display with percentage
- Enhanced memory display with used/total format
- Added GPU info display with model name
- Removed broken performance.memory fallback

UI improvements:
- FPS, CPU%, RAM, and GPU now all visible in StatusBar
- Added tooltips for each metric
- Responsive truncation for long GPU names

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -161,6 +161,13 @@
         }
       })();
     </script>
+
+    <!-- React Grab - Development only -->
+    <script type="module">
+      if (import.meta.env.DEV) {
+        import("react-grab");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
