--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -28,6 +28,13 @@
         document.documentElement.style.colorScheme = isDark ? 'dark' : 'light';
       })();
     </script>
+
+    <!-- React Grab - Development only -->
+    <script type="module">
+      if (import.meta.env.DEV) {
+        import("react-grab");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
